# Trajectory-Orchestrator

./: .gitignore  README.md  pyproject.toml
.claude-config/: settings.json.template
docs/superpowers/plans/trajectory-maker/: 00-bootstrap.md  01-models.md  02-docker.md  03-driver.md  04-sanitize.md  05-grade.md  06-synthesize.md  07-verify.md  08-run-package.md  09-clean-cli.md  README.md
docs/superpowers/specs/trajectory-maker/: 00-overview.md  01-task-schema.md  02-synthesize.md  03-verify.md  04-run.md  (+6 more)
src/trajectory_maker/: __init__.py  claude_env.py  cli.py  convert.py  docker.py  driver.py  grade.py  models.py  orchestrator.py  package.py  recording_proxy.py  run.py  sanitize.py  synthesize.py  user_agent.py  verify.py  workflow.py
src/trajectory_maker/resources/: sanitize_rules.yaml
tests/: conftest.py  test_claude_env.py  test_cli.py  test_cli_commands.py  test_convert.py  test_docker.py  test_driver.py  test_e2e.py  test_grade.py  test_local_workflow_run.py  test_models.py  test_orchestrator.py  test_package.py  test_recording_proxy.py  test_run_loop.py  test_sanitize.py  test_sanitize_req.py  test_synthesize.py  test_user_agent.py  test_verify.py  test_workflow.py  test_workflow_run.py
tests/fixtures/: events_error_auth.jsonl  events_result_complete.jsonl  fake_claude.py  fake_claude_judge.py  task_invalid_bad_pass_condition.yaml  task_invalid_missing_field.yaml  task_valid.yaml  trajectory_dirty.jsonl
tests/fixtures/docker/: Dockerfile
tests/fixtures/echo_task/: Dockerfile  task.yaml
tests/fixtures/synth_valid/: Dockerfile  task.yaml
(+4 files in other folders)
