[project]
name = "trajectory-maker"
version = "0.1.0"
description = "LLM agent trajectory generator: synthesize agentic tasks, verify, and record claude code trajectories in docker."
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
trajectory-maker = "trajectory_maker.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajectory_maker"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "integration: tests requiring real docker",
    "e2e: tests requiring real claude endpoint + apikey",
]
